# vela

./: .env  Cargo.toml  README.md
apis/vela/common/: api.proto  code.proto  metadata.proto  status.proto
apis/vela/connect/: connect.proto
apis/vela/table/: table.proto
examples/vela-gateway/: Cargo.toml
examples/vela-gateway/src/: main.rs
protocols/vela-connect/: Cargo.toml  build.rs
protocols/vela-connect/proto/: connect.proto
protocols/vela-connect/src/: client.rs  inbound.rs  lib.rs  outbound.rs  protocol.rs  server.rs
protocols/vela-request/: Cargo.toml
protocols/vela-request/src/: client.rs  lib.rs  server.rs
protocols/vela-table/: Cargo.toml  build.rs
protocols/vela-table/proto/: table.proto
protocols/vela-table/src/: inbound.rs  lib.rs  outbound.rs  protocol.rs
vela/: Cargo.toml
vela-core/: Cargo.toml
vela-core/proto/: table.proto
vela-core/src/: authenticate.rs  ids.rs  jwt.rs  lib.rs  protobuf.rs  session.rs
vela-core/src/session/: local_registry.rs
vela-protobuf/: Cargo.toml  build.rs
vela-protobuf/src/: io.rs  lib.rs
vela/src/: lib.rs
