[workspace]
members = ["vela", "vela-core", "protocols/vela-connect", "examples/vela-gateway", "protocols/vela-table"]
resolver = "3"

[workspace.package]
rust-version = "1.88.0"
edition = "2024"

[workspace.dependencies]
volans = "0.1.0"
prost = "0.14.1"
futures = "0.3.31"
thiserror = "2.0"
tracing = "0.1"
tokio = "1.47"
actix = "0.13.5"
prost-types = "0.14.1"
asynchronous-codec = "0.7.0"

vela-core = { path = "vela-core" }

# protocols
vela-connect = { path = "protocols/vela-connect"}
