[package]
name = "vela-core"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
futures.workspace = true
pin-project = "1.1.10"
thiserror.workspace = true
jsonwebtoken = "9.3.1"
volans = {workspace = true, features = []}
serde = { version = "1.0.219", features = ["derive"] }
bs58 = "0.5.1"
async-trait = "0.1.88"
parking_lot = "0.12.4"
smallvec = "1.15.1"
rand = "0.9.2"
smol_str = "0.3.2"
