[package]
name = "vela-protobuf"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[features]
default = ["common"]
common = []
connect = []
table = []

[dependencies]
prost.workspace = true
prost-types.workspace = true
futures.workspace = true
asynchronous-codec.workspace = true
thiserror.workspace = true
unsigned-varint = { version = "0.8.0", features = ["asynchronous_codec"] }
pin-project = "1.1.10"

[build-dependencies]
prost-build = "0.14.1"
