[package]
name = "vela"
version = "0.0.1"
rust-version.workspace = true
edition.workspace = true
description = "Quick develop table game server with Vela framework"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/vela"
keywords = ["vela", "networking", "game"]
categories = ["network-programming", "asynchronous", "game-development"]


[dependencies]
