[package]
name = "vela-gateway"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
volans = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "env-filter",
    "local-time",
] }
tracing = { workspace = true }
anyhow = "1.0.98"
rand = "0.9.2"
futures.workspace = true
futures-timer = "3.0.3"
vela-connect.workspace = true
vela-protobuf = { workspace = true, features = ["connect"] }
vela-core = { workspace = true }
dotenvy = "0.15.7"
