[package]
name = "vela-request"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
vela-protobuf = {workspace = true, features = ["connect"]}
volans ={ workspace = true, features = ["swarm", "request"] }
tracing.workspace = true
futures.workspace = true
async-trait = "0.1.88"
prost = {workspace = true}
prost-types.workspace = true
