[package]
name = "vela-table"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
volans = {workspace = true, features = ["swarm"]}
futures.workspace = true
rand = "0.9.2"
thiserror.workspace = true
futures-timer = "3.0.3"
tracing.workspace = true
either = "1.15.0"
prost = "0.14.1"
asynchronous-codec = "0.7.0"
actix.workspace = true
prost-types = "0.14.1"
vela-core.workspace = true

[build-dependencies]
prost-build = "0.14.1"
